force-app/main/default/objects/ampi__Financial__c/ampi__Financial__c.object-meta.xml
<CustomObject>
    <description>Financial records of a project, per reporting period and budget</description>
    <label>Financial</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>