force-app/main/default/objects/ampi__Financial__c/fields/ampi__Activity__c.field-meta.xml
<CustomField>
    <fullName>ampi__Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to add financial line items to a project activity.</description>
    <label>Activity</label>
    <referenceTo>ampi__Activity__c</referenceTo>
    <relationshipLabel>Financials</relationshipLabel>
    <relationshipName>Financials</relationshipName>
    <type>Lookup</type>
</CustomField>