force-app/main/default/objects/ampi__Financial__c/fields/ampi__Amount_Actual__c.field-meta.xml
<CustomField>
    <fullName>ampi__Amount_Actual__c</fullName>
    <description>Currency field to track the actual expenditure/revenue for a financial record.</description>
    <label>Amount Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>