force-app/main/default/objects/ampi__Financial__c/fields/ampi__Amount_Planned__c.field-meta.xml
<CustomField>
    <fullName>ampi__Amount_Planned__c</fullName>
    <description>Currency field to track the planned amount to be spent/earned for a financial record.</description>
    <label>Amount Planned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>