force-app/main/default/objects/ampi__Financial__c/fields/ampi__Budget__c.field-meta.xml
<CustomField>
    <fullName>ampi__Budget__c</fullName>
    <description>Master-detail field to relate a financial record to a budget record.</description>
    <label>Budget</label>
    <referenceTo>ampi__Budget__c</referenceTo>
    <relationshipLabel>Financials</relationshipLabel>
    <relationshipName>Financials</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>