force-app/main/default/objects/ampi__Financial__c/fields/ampi__Category__c.field-meta.xml
<CustomField>
    <fullName>ampi__Category__c</fullName>
    <description>This picklist field is for categorizing Financial records based on their purpose. This field is unrestricted and can be modified by subscribers.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Result based</fullName>
            </value>
            <value>
                <fullName>9 PSCI</fullName>
            </value>
            <value>
                <fullName>Overarching</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>ADV</fullName>
            </value>
            <value>
                <fullName>SIL</fullName>
            </value>
            <value>
                <fullName>FLC</fullName>
            </value>
            <value>
                <fullName>DFE</fullName>
            </value>
            <value>
                <fullName>CFE</fullName>
            </value>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>HA</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>ECD</fullName>
            </value>
            <value>
                <fullName>EDU</fullName>
            </value>
            <value>
                <fullName>EET</fullName>
            </value>
            <value>
                <fullName>ER</fullName>
            </value>
            <value>
                <fullName>FFC</fullName>
            </value>
            <value>
                <fullName>FS</fullName>
            </value>
            <value>
                <fullName>HPP</fullName>
            </value>
            <value>
                <fullName>MED</fullName>
            </value>
            <value>
                <fullName>OA</fullName>
            </value>
            <value>
                <fullName>OAC</fullName>
            </value>
            <value>
                <fullName>SGH</fullName>
            </value>
            <value>
                <fullName>SFC</fullName>
            </value>
            <value>
                <fullName>YC</fullName>
            </value>
            <value>
                <fullName>3 CMG CI</fullName>
            </value>
            <value>
                <fullName>3 FD CI</fullName>
            </value>
            <value>
                <fullName>2 IF4C COR</fullName>
            </value>
            <value>
                <fullName>2 IF4C D2D</fullName>
            </value>
            <value>
                <fullName>2 IF4C DB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>