force-app/main/default/objects/ampi__Financial__c/fields/ampi__Cost_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>ampi__Cost_per_Unit__c</fullName>
    <description>Currency field to capture the cost per unit in a financial record.</description>
    <label>Cost per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>