force-app/main/default/objects/ampi__Financial__c/fields/ampi__IATI_Aid_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Aid_Type__c</fullName>
    <description>Picklist to specify Aid Type as based on IATI code list (http://reference.iatistandard.org/203/codelists/AidType/). The code list sits in the API Name/value of the picklist value, while the Label is the human-readable name of the Aid Type. This value is printed into the transaction/aid-type/@code attribute in the IATI Activity XML.</description>
    <label>IATI Aid Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ampi__IATI_Aid_Type_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>ampi__IATI_Aid_Type</valueSetName>
    </valueSet>
</CustomField>