force-app/main/default/objects/ampi__Financial__c/fields/ampi__IATI_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Code__c</fullName>
    <description>Text field to store the code of a Country Budget Item for IATI Activity reporting. The value in this field should be dependent on the value in Budget__r.Vocabulary__c.</description>
    <label>Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>