force-app/main/default/objects/ampi__Financial__c/fields/ampi__IATI_Finance_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Finance_Type__c</fullName>
    <description>Picklist to specify Finance Type as based on IATI code list (http://reference.iatistandard.org/203/codelists/FinanceType/). The code list sits in the API Name/value of the picklist value, while the Label is the human-readable name of the Finance Type. This code is printed into the transaction/finance-type/@code attribute in the IATI Activity XML.</description>
    <label>IATI Finance Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ampi__IATI_Finance_Type_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>ampi__IATI_Finance_Type</valueSetName>
    </valueSet>
</CustomField>