force-app/main/default/objects/ampi__Financial__c/fields/ampi__IATI_Flow_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Flow_Type__c</fullName>
    <description>Picklist to specify Flow Type as based on IATI code list (http://reference.iatistandard.org/203/codelists/FlowType/). The code list sits in the API Name/value of the picklist value, while the Label is the human-readable name of the Flow Type. This code is printed into the transaction/flow-type/@code attribute in the IATI Activity XML.</description>
    <label>IATI Flow Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ampi__IATI_Flow_Type</valueSetName>
    </valueSet>
</CustomField>