force-app/main/default/objects/ampi__Financial__c/fields/ampi__IATI_Organization_Role__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Organization_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to track Grant Making Organization, Providing Project, and Receiving Project. The record selected in this lookup determines what IATI organization codes are printed into the transaction/provider-org/@ref and transaction/receiver-org/@ref attributes in the IATI Activity XML.</description>
    <label>IATI Organization Role</label>
    <referenceTo>ampi__Organization_Role__c</referenceTo>
    <relationshipLabel>Financials</relationshipLabel>
    <relationshipName>Financials</relationshipName>
    <type>Lookup</type>
</CustomField>