force-app/main/default/objects/ampi__Financial__c/fields/ampi__IATI_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Percentage__c</fullName>
    <description>Percent field to track the percentage of each country budget item within a budget. Individual values in this field must be between 0 and 100, and the total values in this field for any particular budget identifier vocabulary cannot exceed 100. This value is printed into the country-budget-items/budget-item/@percentage element in the IATI Activity XML.</description>
    <label>IATI Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>