force-app/main/default/objects/ampi__Financial__c/fields/ampi__IATI_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Transaction_Type__c</fullName>
    <description>[Candidate for Deprecation] Picklist to specify Transaction Type as based on IATI code list. The code list sits in the API Name/value of the picklist value, while the Label is the human-readable name of the Transaction Type. This does not get printed into the IATI Activity XML.</description>
    <inlineHelpText>The type of the transaction (e.g. commitment, disbursement, expenditure, etc.) tracked for IATI</inlineHelpText>
    <label>IATI Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incoming Funds</fullName>
            </value>
            <value>
                <fullName>Outgoing Commitment</fullName>
            </value>
            <value>
                <fullName>Disbursement</fullName>
            </value>
            <value>
                <fullName>Expenditure</fullName>
            </value>
            <value>
                <fullName>Interest Payment</fullName>
            </value>
            <value>
                <fullName>Loan Repayment</fullName>
            </value>
            <value>
                <fullName>Reimbursement</fullName>
            </value>
            <value>
                <fullName>Purchase of Equity</fullName>
            </value>
            <value>
                <fullName>Sale of Equity</fullName>
            </value>
            <value>
                <fullName>Credit Guarantee</fullName>
            </value>
            <value>
                <fullName>Incoming Commitment</fullName>
            </value>
            <value>
                <fullName>Outgoing Pledge</fullName>
            </value>
            <value>
                <fullName>Incoming Pledge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>