force-app/main/default/objects/ampi__Financial__c/fields/ampi__IATI_Transaction_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Transaction_Type_Code__c</fullName>
    <description>[Candidate for Deprecation] Formula field that associates a code with ampi__IATI_Transaction_Type__c. This does not get printed into the IATI Activity XML.</description>
    <formula>CASE(ampi__IATI_Transaction_Type__c, 
&quot;Incoming Funds&quot;,1, 
&quot;Outgoing Commitment&quot;,2, 
&quot;Disbursement&quot;,3,
&quot;Expenditure&quot;,4,
&quot;Interest Payment&quot;,5,
&quot;Loan Repayment&quot;,6,
&quot;Reimbursement&quot;,7,
&quot;Purchase of Equity&quot;,8,
&quot;Sale of Equity&quot;,9,
&quot;Credit Guarantee&quot;,10,
&quot;Incoming Commitment&quot;,11,
&quot;Outgoing Pledge&quot;,12,
&quot;Incoming Pledge&quot;,13,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Code corresponding to IATI Transaction Type</inlineHelpText>
    <label>IATI Transaction Type Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>