force-app/main/default/objects/ampi__Financial__c/fields/ampi__IATI_Value_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Value_Date__c</fullName>
    <description>The date to be used for determining the exchange rate for currency conversions. This value is printed in the transaction/value/@value-date attribute in the IATI Activity XML. This date cannot be in the future.</description>
    <inlineHelpText>This date cannot be in the future.</inlineHelpText>
    <label>IATI Value Date</label>
    <type>Date</type>
</CustomField>