force-app/main/default/objects/ampi__Financial__c/fields/ampi__Quantity__c.field-meta.xml
<CustomField>
    <fullName>ampi__Quantity__c</fullName>
    <description>Number field to capture the quantity value for a financial line item if the record involves some number of units.</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>