force-app/main/default/objects/ampi__Financial__c/fields/ampi__Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>ampi__Reporting_Period__c</fullName>
    <description>Master-detail field to relate a financial record to a reporting period.</description>
    <label>Reporting Period</label>
    <referenceTo>ampi__Reporting_Period__c</referenceTo>
    <relationshipLabel>Financials</relationshipLabel>
    <relationshipName>Financials</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>