force-app/main/default/objects/ampi__Financial__c/fields/ampi__Status__c.field-meta.xml
<CustomField>
    <fullName>ampi__Status__c</fullName>
    <description>This formula field copies the Result Status from related Reporting Period. This field is unrestricted and can be modified by subscribers.</description>
    <formula>TEXT(ampi__Reporting_Period__r.ampi__Result_Status__c)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>