force-app/main/default/objects/ampi__Financial__c/fields/ampi__Subcategory__c.field-meta.xml
<CustomField>
    <fullName>ampi__Subcategory__c</fullName>
    <description>This picklist allows users to provide more nuanced categorization for a financial record. This field is unrestricted and can be modified by subscribers.</description>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ampi__Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Salaries</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Meals</fullName>
            </value>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Supplies</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>