force-app/main/default/objects/ampi__Financial__c/fields/ampi__Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__Type__c</fullName>
    <description>Picklist to denote the type of the financial record. The value in this picklist determines which rollup fields (Planned Revenue and Actual Revenue or Planned Expenditure and Actual Expenditure) a particular Financial record is counted in.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expenditure</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>