force-app/main/default/objects/ampi__Financial__c/fields/ampi__Unit__c.field-meta.xml
<CustomField>
    <fullName>ampi__Unit__c</fullName>
    <description>Text field to capture the unit type used in a financial record.</description>
    <label>Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>