force-app/main/default/objects/ampi__Financial__c/fields/ampi__Variance__c.field-meta.xml
<CustomField>
    <fullName>ampi__Variance__c</fullName>
    <description>This is a formula field to calculate the percentage difference between the actual and planned expenditure.</description>
    <formula>(ampi__Amount_Actual__c - ampi__Amount_Planned__c) / ampi__Amount_Planned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a formula field to calculate the percentage difference between the actual and planned expenditure</inlineHelpText>
    <label>Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>