force-app/main/default/objects/ampi__Financial__c/fields/Order_Project__c.field-meta.xml
<CustomField>
    <fullName>Order_Project__c</fullName>
    <label>Order Project</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>