force-app/main/default/objects/ampi__Financial__c/fields/PU__c.field-meta.xml
<CustomField>
    <fullName>PU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PU</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>P&amp;PU must be Programme Unit or NMU</errorMessage>
        <filterItems>
            <field>ampi__Geographical_Area__c.ampi__Type__c</field>
            <operation>equals</operation>
            <value>Programme Unit, National Management Unit</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ampi__Geographical_Area__c</referenceTo>
    <relationshipLabel>Financials</relationshipLabel>
    <relationshipName>Financials</relationshipName>
    <type>Lookup</type>
</CustomField>