force-app/main/default/objects/ampi__Financial__c/fields/PU_code__c.field-meta.xml
<CustomField>
    <fullName>PU_code__c</fullName>
    <formula>PU__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PU code</label>
    <type>Text</type>
</CustomField>