force-app/main/default/objects/ampi__Financial__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <formula>IF(ampi__Budget__r.ampi__Project__c &lt;&gt; &apos;&apos;, ampi__Budget__r.ampi__Project__r.Project_Number_ID__c + &apos;_&apos; + IF(ISPICKVAL(ampi__Type__c, &apos;Expenditure&apos;), &apos;EA&apos;, &apos;&apos;) + LPAD(TEXT(Order_Project__c), 2, &apos;0&apos;), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Name</label>
    <type>Text</type>
</CustomField>