force-app/main/default/objects/ampi__Financial__c/validationRules/ampi__Is_Budget_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>ampi__Is_Budget_Locked</fullName>
    <active>false</active>
    <description>Throw an error if Budget is locked</description>
    <errorConditionFormula>ampi__Budget__r.ampi__Locked__c = true</errorConditionFormula>
    <errorMessage>Budget is locked</errorMessage>
</ValidationRule>