force-app/main/default/objects/ampi__Financial__c/listViews/ampi__All.listView-meta.xml
<ListView>
    <fullName>ampi__All</fullName>
    <columns>NAME</columns>
    <columns>ampi__Budget__c</columns>
    <columns>ampi__Activity__c</columns>
    <columns>ampi__Category__c</columns>
    <columns>Order_Project__c</columns>
    <columns>Unique_Name__c</columns>
    <columns>ampi__Description__c</columns>
    <columns>ampi__Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <columns>ampi__Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>ampi__Reporting_Period__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>