force-app/main/default/objects/ampi__Financial__c/listViews/Financials_with_category_3_CMG.listView-meta.xml
<ListView>
    <fullName>Financials_with_category_3_CMG</fullName>
    <columns>NAME</columns>
    <columns>ampi__Budget__c</columns>
    <columns>ampi__Activity__c</columns>
    <columns>ampi__Category__c</columns>
    <columns>ampi__Description__c</columns>
    <columns>ampi__Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Unique_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ampi__Category__c</field>
        <operation>equals</operation>
        <value>3 CMG CI</value>
    </filters>
    <label>003 - Financials with category 3 CMG</label>
</ListView>