force-app/main/default/objects/ampi__Financial__c/listViews/Financials_with_category_Grant.listView-meta.xml
<ListView>
    <fullName>Financials_with_category_Grant</fullName>
    <columns>NAME</columns>
    <columns>ampi__Budget__c</columns>
    <columns>ampi__Activity__c</columns>
    <columns>ampi__Category__c</columns>
    <columns>ampi__Description__c</columns>
    <columns>ampi__Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Unique_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>Grant</value>
    </filters>
    <label>002 - Financials with category Grant</label>
</ListView>