force-app/main/default/objects/ampi__Financial__c/listViews/Financials_with_category_Overarching.listView-meta.xml
<ListView>
    <fullName>Financials_with_category_Overarching</fullName>
    <columns>NAME</columns>
    <columns>ampi__Budget__c</columns>
    <columns>ampi__Category__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Unique_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ampi__Category__c</field>
        <operation>equals</operation>
        <value>Overarching</value>
    </filters>
    <label>Financials with category Overarching</label>
</ListView>