force-app/main/default/objects/ampi__Financial__c/listViews/X001_Financials_with_category_PSCI.listView-meta.xml
<ListView>
    <fullName>X001_Financials_with_category_PSCI</fullName>
    <columns>NAME</columns>
    <columns>ampi__Budget__c</columns>
    <columns>ampi__Activity__c</columns>
    <columns>ampi__Category__c</columns>
    <columns>ampi__Description__c</columns>
    <columns>ampi__Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Unique_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ampi__Category__c</field>
        <operation>equals</operation>
        <value>9 PSCI</value>
    </filters>
    <label>001- Financials with category PSCI</label>
</ListView>