force-app/main/default/objects/ampi__Financial__c/listViews/X005_Financials_with_category_NSE.listView-meta.xml
<ListView>
    <fullName>X005_Financials_with_category_NSE</fullName>
    <columns>NAME</columns>
    <columns>ampi__Budget__c</columns>
    <columns>ampi__Activity__c</columns>
    <columns>ampi__Category__c</columns>
    <columns>ampi__Description__c</columns>
    <columns>ampi__Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Unique_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ampi__Category__c</field>
        <operation>equals</operation>
        <value>1 NA GSC,1 NA ADMIN,1 P ADV</value>
    </filters>
    <label>005 - Financials with category NSE</label>
</ListView>