force-app/main/default/objects/ampi__Financial__c/listViews/X006_Financials_with_category_3_FD_CI.listView-meta.xml
<ListView>
    <fullName>X006_Financials_with_category_3_FD_CI</fullName>
    <columns>NAME</columns>
    <columns>ampi__Budget__c</columns>
    <columns>ampi__Activity__c</columns>
    <columns>ampi__Category__c</columns>
    <columns>ampi__Description__c</columns>
    <columns>ampi__Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Unique_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ampi__Category__c</field>
        <operation>equals</operation>
        <value>3 FD CI</value>
    </filters>
    <label>006 - Financials with category 3 FD CI</label>
</ListView>