force-app/main/default/objects/ampi__Financial__c/listViews/X007_All_Financials_for_Construction.listView-meta.xml
<ListView>
    <fullName>X007_All_Financials_for_Construction</fullName>
    <columns>NAME</columns>
    <columns>ampi__Budget__c</columns>
    <columns>ampi__Activity__c</columns>
    <columns>ampi__Category__c</columns>
    <columns>ampi__Description__c</columns>
    <columns>ampi__Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Unique_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unique_Name__c</field>
        <operation>startsWith</operation>
        <value>C</value>
    </filters>
    <label>007 - Financials for Construction actv</label>
</ListView>